# qt-form-helloworld

./: .gitignore  CMakeLists.txt  README.md  _mainwindow.h  main.cpp  mainwindow.cpp  mainwindow.h
